--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@
           >
           <ul class="menu-list list">
             <li class="menu-item">
-              <a class="menu-link link menu-link-after" href="./index.html">Studio 
-                </a>
+              <a class="menu-link link menu-link-after" href="./index.html"
+                >Studio
+              </a>
             </li>
 
             <li class="menu-item">
               <a class="menu-link link" href="./portfolio.html">Portfolio</a>
             </li>
-            
+
             <li class="menu-item">
               <a class="menu-link link" href="">Contacts</a>
             </li>
@@ -57,12 +58,13 @@
       </div>
     </header>
     <main>
-
       <!-- Section 1 -->
       <section class="section-hero">
         <div class="section-hero-container container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
-          <button class="modal-btn" type="button" data-modal-open>Order Service</button>
+          <button class="modal-btn" type="button" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
 
@@ -478,17 +480,95 @@
       </div>
     </footer>
 
-<!-- modal wind -->
-<div class="backdrop is-hidden" data-modal>
-  <div class="modal">
-    <button class="modal-close-btn" type="button" data-modal-close>
-      <svg class="modal-close-btn-icon" width="8" height="8">
-      <use href="./images/icons.svg#icon-close-black"></use>
-    </svg>
-  </button>
-  </div>
-</div>
+    <!-- modal wind -->
+    <div class="backdrop" data-modal>
+      <div class="modal">
+        <button class="modal-close-btn" type="button" data-modal-close>
+          <svg class="modal-close-btn-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
 
-<script src="./js/model.js"></script>
+        <form class="modal-form">
+          <label class="modal-form-field">
+            <span class="modal-form-input-desc">Name</span>
+            <span class="modal-form-input-wrapper">
+              <input
+                type="text"
+                name="user-name"
+                class="modal-form-input"
+                required
+                pattern="^[a-zA-Zа-яА-Я]+"
+                minlength="2"
+              />
+              <span class="modal-form-input-icon">
+                <svg class="" width="18" height="24">
+                  <use href="./images/icons.svg#icon-Vector"></use>
+                </svg>
+              </span>
+            </span>
+          </label>
+
+          <label class="modal-form-field">
+            <span class="modal-form-input-desc">Phone</span>
+            <span class="modal-form-input-wrapper">
+              <input
+                type="tel"
+                name="user-phone"
+                class="modal-form-input"
+                required
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="xxx-xxx-xx-xx"
+              />
+              <span class="modal-form-input-icon">
+                <svg class="" width="18" height="24">
+                  <use href="./images/icons.svg#icon-Vector-1"></use>
+                </svg>
+              </span>
+            </span>
+          </label>
+
+          <label class="modal-form-field">
+            <span class="modal-form-input-desc">Email</span>
+            <span class="modal-form-input-wrapper">
+              <input
+                type="mailto"
+                name="user-mailto"
+                class="modal-form-input"
+              />
+              <span class="modal-form-input-icon">
+                <svg class="" width="18" height="24">
+                  <use href="./images/icons.svg#icon-Vector-2"></use>
+                </svg>
+              </span>
+            </span>
+          </label>
+
+          <label class="modal-form-field">
+            <span class="modal-form-input-desc">Comment</span>
+            <textarea
+              name="user-message"
+              class="modal-form-message"
+              placeholder="Text input"
+            ></textarea>
+          </label>
+
+          <input
+            id="user-policy"
+            type="checkbox"
+            name="user-policy"
+            class="modal-form-check"
+          />
+          <label for="user-policy" class="modal-form-check-desc"
+            >I accept the terms and conditions of the
+            <a href="">Privacy Policy</a></label
+          >
+
+          <button type="submit" class="modal-form-submit">Send</button>
+        </form>
+      </div>
+    </div>
+
+    <script src="./js/model.js"></script>
   </body>
 </html>
