--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
               />
               <span class="modal-form-input-icon">
                 <svg class="" width="18" height="24">
-                  <use href="./images/icons.svg#icon-Vector"></use>
+                  <use href="./images/icons.svg#icon-name"></use>
                 </svg>
               </span>
             </span>
@@ -522,7 +522,7 @@
               />
               <span class="modal-form-input-icon">
                 <svg class="" width="18" height="24">
-                  <use href="./images/icons.svg#icon-Vector-1"></use>
+                  <use href="./images/icons.svg#icon-phon"></use>
                 </svg>
               </span>
             </span>
@@ -538,7 +538,7 @@
               />
               <span class="modal-form-input-icon">
                 <svg class="" width="18" height="24">
-                  <use href="./images/icons.svg#icon-Vector-2"></use>
+                  <use href="./images/icons.svg#icon-maili"></use>
                 </svg>
               </span>
             </span>
