--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
               />
               <span class="modal-form-input-icon">
                 <svg class="" width="18" height="24">
-                  <use href="./images/icons.svg#icon-name"></use>
+                  <use href="./images/icons.svg#icon-name3"></use>
                 </svg>
               </span>
             </span>
