--- a/index.html
+++ b/index.html
@@ -489,6 +489,7 @@
           </svg>
         </button>
 
+        <strong class="modal-text-form">Leave your contacts and we will call you back</strong>
         <form class="modal-form">
           <label class="modal-form-field">
             <span class="modal-form-input-desc">Name</span>
@@ -502,8 +503,8 @@
                 minlength="2"
               />
               <span class="modal-form-input-icon">
-                <svg class="" width="18" height="24">
-                  <use href="./images/icons.svg#icon-name3"></use>
+                <svg class="modal-form-input-icon-vector" width="12" height="12">
+                  <use href="./images/icons.svg#icon-name"></use>
                 </svg>
               </span>
             </span>
@@ -521,8 +522,8 @@
                 title="xxx-xxx-xx-xx"
               />
               <span class="modal-form-input-icon">
-                <svg class="" width="18" height="24">
-                  <use href="./images/icons.svg#icon-phon"></use>
+                <svg class="modal-form-input-icon-vector" width="13" height="13">
+                  <use href="./images/icons.svg#icon-phone"></use>
                 </svg>
               </span>
             </span>
@@ -537,8 +538,8 @@
                 class="modal-form-input"
               />
               <span class="modal-form-input-icon">
-                <svg class="" width="18" height="24">
-                  <use href="./images/icons.svg#icon-maili"></use>
+                <svg class="modal-form-input-icon-vector" width="15" height="12">
+                  <use href="./images/icons.svg#icon-mail"></use>
                 </svg>
               </span>
             </span>
