--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
             id="user-policy"
             type="checkbox"
             name="user-policy"
-            class="modal-form-check"
+            class="modal-form-check visually-hidden"
           />
           <label for="user-policy" class="modal-form-check-desc"
             >I accept the terms and conditions of the
