--- a/index.html
+++ b/index.html
@@ -489,7 +489,9 @@
           </svg>
         </button>
 
-        <strong class="modal-text-form">Leave your contacts and we will call you back</strong>
+        <strong class="modal-text-form"
+          >Leave your contacts and we will call you back</strong
+        >
         <form class="modal-form">
           <label class="modal-form-field">
             <span class="modal-form-input-desc">Name</span>
@@ -503,7 +505,11 @@
                 minlength="2"
               />
               <span class="modal-form-input-icon">
-                <svg class="modal-form-input-icon-vector" width="12" height="12">
+                <svg
+                  class="modal-form-input-icon-vector"
+                  width="12"
+                  height="12"
+                >
                   <use href="./images/icons.svg#icon-name"></use>
                 </svg>
               </span>
@@ -522,7 +528,11 @@
                 title="xxx-xxx-xx-xx"
               />
               <span class="modal-form-input-icon">
-                <svg class="modal-form-input-icon-vector" width="13" height="13">
+                <svg
+                  class="modal-form-input-icon-vector"
+                  width="13"
+                  height="13"
+                >
                   <use href="./images/icons.svg#icon-phone"></use>
                 </svg>
               </span>
@@ -538,7 +548,11 @@
                 class="modal-form-input"
               />
               <span class="modal-form-input-icon">
-                <svg class="modal-form-input-icon-vector" width="15" height="12">
+                <svg
+                  class="modal-form-input-icon-vector"
+                  width="15"
+                  height="12"
+                >
                   <use href="./images/icons.svg#icon-mail"></use>
                 </svg>
               </span>
@@ -562,8 +576,8 @@
           />
           <label for="user-policy" class="modal-form-check-desc"
             >I accept the terms and conditions of the
-            <a href="">Privacy Policy</a></label
-          >
+            <a href="">Privacy Policy</a>
+          </label>
 
           <button type="submit" class="modal-form-submit">Send</button>
         </form>
