--- a/portfolio.html
+++ b/portfolio.html
@@ -361,6 +361,25 @@
             </li>
           </ul>
         </div>
+
+        <div class="footer-mailto">
+          <p class="footer-mailto-text">Subscribe</p>
+          <form class="footer-mailto-form">
+            <label for="" class="footer-mailto-label">
+              <input
+                class="footer-mailto-input"
+                type="mailto"
+                name="mailto"
+                required pattern="^(?=.*[a-z])(?=.*[A-Z])"
+                placeholder="E-mail"/>
+            </label>
+            <button class="footer-mailto-btn" type="Subscribe">Subscribe
+              <svg class="footer-mailto-svg" width="24" height="20">
+                <use href="./images/icons.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
