--- a/index.html
+++ b/index.html
@@ -478,19 +478,19 @@
           </ul>
         </div>
 
-        <div class="footer-mailto">
-          <p class="footer-mailto-text">Subscribe</p>
-          <form class="footer-mailto-form">
-            <label for="" class="footer-mailto-label">
+        <div class="footer-email">
+          <p class="footer-email-text">Subscribe</p>
+          <form class="footer-email-form">
+            <label for="user-email" class="footer-email-label">
               <input
-                class="footer-mailto-input"
-                type="mailto"
-                name="mailto"
+                class="footer-email-input"
+                type="email"
+                name="email"
                 required 
-                placeholder="E-mail"/>
+                placeholder="email"/>
             </label>
-            <button class="footer-mailto-btn" type="Subscribe">Subscribe
-              <svg class="footer-mailto-svg" width="24" height="20">
+            <button class="footer-email-btn" type="Subscribe">Subscribe
+              <svg class="footer-email-svg" width="24" height="20">
                 <use href="./images/icons.svg#icon-telegram"></use>
               </svg>
             </button>
