--- a/index.html
+++ b/index.html
@@ -481,15 +481,15 @@
         <div class="footer-email">
           <p class="footer-email-text">Subscribe</p>
           <form class="footer-email-form">
-            <label for="user-email" class="footer-email-label">
+            <label class="footer-email-label">
               <input
                 class="footer-email-input"
                 type="email"
                 name="email"
                 required 
-                placeholder="email"/>
+                placeholder="E-mail"/>
             </label>
-            <button class="footer-email-btn" type="Subscribe">Subscribe
+            <button class="footer-email-btn" type="submit">Subscribe
               <svg class="footer-email-svg" width="24" height="20">
                 <use href="./images/icons.svg#icon-telegram"></use>
               </svg>
@@ -562,8 +562,8 @@
             <span class="modal-form-input-desc">Email</span>
             <span class="modal-form-input-wrapper">
               <input
-                type="mailto"
-                name="user-mailto"
+                type="email"
+                name="email"
                 class="modal-form-input"
               />
               <span class="modal-form-input-icon">
@@ -593,9 +593,9 @@
             name="user-policy"
             class="modal-form-check visually-hidden"
           />
-          <label for="user-policy" class="modal-form-check-desc"
+          <label for="user-policy" class="modal-form-check-desc " 
             >I accept the terms and conditions of the&nbsp;
-            <a href="">Privacy Policy</a>
+            <a class="color-privace" href="">Privacy Policy</a>
           </label>
 
           <button type="submit" class="modal-form-submit">Send</button>
