--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <div class="container page-header-container">
         <nav class="page-nav">
           <a class="logo-type link" href="./index.html"
-            >Web<span class="colorr">Studio</span></a
-          >
+            >Web<span class="colorr">Studio</span></a>
+
           <ul class="menu-list list">
             <li class="menu-item">
               <a class="menu-link link menu-link-after" href="./index.html"
@@ -45,19 +45,19 @@
           <ul class="contact list">
             <li class="contact-item">
               <a class="addressa link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+                >info@devstudio.com</a>
             </li>
+
             <li class="contact-item">
               <a class="addressa link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
+                >+11 (000) 111-11-11</a>
             </li>
           </ul>
         </address>
       </div>
     </header>
     <main>
+
       <!-- Section 1 -->
       <section class="section-hero">
         <div class="section-hero-container container">
@@ -79,8 +79,7 @@
                 <svg
                   class="distinctive-features-item-icon"
                   width="64"
-                  height="64"
-                >
+                  height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -96,8 +95,7 @@
                 <svg
                   class="distinctive-features-item-icon"
                   width="64"
-                  height="64"
-                >
+                  height="64">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -113,8 +111,7 @@
                 <svg
                   class="distinctive-features-item-icon"
                   width="64"
-                  height="64"
-                >
+                  height="64">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -130,8 +127,7 @@
                 <svg
                   class="distinctive-features-item-icon"
                   width="64"
-                  height="64"
-                >
+                  height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -155,8 +151,7 @@
                 src="./images/robots/img-1.jpg"
                 alt="computer"
                 width="360"
-                height="300"
-              />
+                height="300"/>
             </li>
 
             <li class="flex-items-w work-item">
@@ -164,8 +159,7 @@
                 src="./images/robots/img-2.jpg"
                 alt="phone"
                 width="360"
-                height="300"
-              />
+                height="300"/>
             </li>
 
             <li class="flex-items-w work-item">
@@ -173,8 +167,7 @@
                 src="./images/robots/img-3.jpg"
                 alt="laptop"
                 width="360"
-                height="300"
-              />
+                height="300"/>
             </li>
           </ul>
         </div>
@@ -190,8 +183,7 @@
                 src="./images/team/mark-guerrero-1.jpg"
                 alt="foto-mark-guerrero"
                 width="264"
-                height="260"
-              />
+                height="260"/>
               <div class="post-s-t">
                 <h3 class="team-member-name">Mark Guerrero</h3>
                 <p class="our-team-text">Product Designer</p>
@@ -236,8 +228,7 @@
                 src="./images/team/tom-ford-2.jpg"
                 alt="foto-tom-ford"
                 width="264"
-                height="260"
-              />
+                height="260"/>
               <div class="post-s-t">
                 <h3 class="team-member-name">Tom Ford</h3>
                 <p class="our-team-text">Frontend Developer</p>
@@ -282,8 +273,7 @@
                 src="./images/team/camila-garcia-3.jpg"
                 alt="foto-camila-garcia"
                 width="264"
-                height="260"
-              />
+                height="260"/>
               <div class="post-s-t">
                 <h3 class="team-member-name">Camila Garcia</h3>
                 <p class="our-team-text">Marketing</p>
@@ -328,8 +318,7 @@
                 src="./images/team/daniel-wilson-4.jpg"
                 alt="foto-daniel-wilson"
                 width="264"
-                height="260"
-              />
+                height="260"/>
               <div class="post-s-t">
                 <h3 class="team-member-name">Daniel Wilson</h3>
                 <p class="our-team-text">UI Designer</p>
@@ -433,9 +422,7 @@
     <footer class="footer">
       <div class="container footer-container">
         <div class="logo-type-text-footer">
-          <a class="logo-type-footer link" href="./index.html"
-            >Web<span class="colorr-footer">Studio</span></a
-          >
+          <a class="logo-type-footer link" href="./index.html">Web<span class="colorr-footer">Studio</span></a>
           <p class="footer-text">
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
@@ -445,32 +432,28 @@
           <p class="social-network-text">Social media</p>
           <ul class="social-network-list list">
             <li class="social-network-list-item">
-              <a href="" class="social-network-list-link"
-                ><svg class="social-network-list-icon" width="24" height="24">
+              <a href="" class="social-network-list-link"><svg class="social-network-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
 
             <li class="social-network-list-item">
-              <a href="" class="social-network-list-link"
-                ><svg class="social-network-list-icon" width="24" height="24">
+              <a href="" class="social-network-list-link"><svg class="social-network-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
 
             <li class="social-network-list-item">
-              <a href="" class="social-network-list-link"
-                ><svg class="social-network-list-icon" width="24" height="24">
+              <a href="" class="social-network-list-link"><svg class="social-network-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
 
             <li class="social-network-list-item">
-              <a href="" class="social-network-list-link"
-                ><svg class="social-network-list-icon" width="24" height="24">
+              <a href="" class="social-network-list-link"><svg class="social-network-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
@@ -508,9 +491,7 @@
           </svg>
         </button>
 
-        <strong class="modal-text-form"
-          >Leave your contacts and we will call you back</strong
-        >
+        <strong class="modal-text-form">Leave your contacts and we will call you back</strong>
         <form class="modal-form">
           <label class="modal-form-field">
             <span class="modal-form-input-desc">Name</span>
@@ -521,14 +502,12 @@
                 class="modal-form-input"
                 required
                 pattern="^[a-zA-Zа-яА-Я]+"
-                minlength="2"
-              />
+                minlength="2"/>
               <span class="modal-form-input-icon">
                 <svg
                   class="modal-form-input-icon-vector"
                   width="12"
-                  height="12"
-                >
+                  height="12">
                   <use href="./images/icons.svg#icon-name"></use>
                 </svg>
               </span>
@@ -544,14 +523,12 @@
                 class="modal-form-input"
                 required
                 pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
-                title="xxx-xxx-xx-xx"
-              />
+                title="xxx-xxx-xx-xx"/>
               <span class="modal-form-input-icon">
                 <svg
                   class="modal-form-input-icon-vector"
                   width="13"
-                  height="13"
-                >
+                  height="13">
                   <use href="./images/icons.svg#icon-phone"></use>
                 </svg>
               </span>
@@ -564,14 +541,12 @@
               <input
                 type="email"
                 name="email"
-                class="modal-form-input"
-              />
+                class="modal-form-input"/>
               <span class="modal-form-input-icon">
                 <svg
                   class="modal-form-input-icon-vector"
                   width="15"
-                  height="12"
-                >
+                  height="12">
                   <use href="./images/icons.svg#icon-mail"></use>
                 </svg>
               </span>
@@ -583,18 +558,15 @@
             <textarea
               name="user-message"
               class="modal-form-message"
-              placeholder="Text input"
-            ></textarea>
+              placeholder="Text input"></textarea>
           </label>
 
           <input
             id="user-policy"
             type="checkbox"
             name="user-policy"
-            class="modal-form-check visually-hidden"
-          />
-          <label for="user-policy" class="modal-form-check-desc " 
-            >I accept the terms and conditions of the&nbsp;
+            class="modal-form-check visually-hidden"/>
+          <label for="user-policy" class="modal-form-check-desc ">I accept the terms and conditions of the&nbsp;
             <a class="color-privace" href="">Privacy Policy</a>
           </label>
 
