--- a/portfolio.html
+++ b/portfolio.html
@@ -317,9 +317,7 @@
     <footer class="footer">
       <div class="container footer-container">
         <div class="logo-type-text-footer">
-          <a class="logo-type-footer link" href="./index.html"
-            >Web<span class="colorr-footer">Studio</span></a
-          >
+          <a class="logo-type-footer link" href="./index.html">Web<span class="colorr-footer">Studio</span></a>
           <p class="footer-text">
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
@@ -329,32 +327,28 @@
           <p class="social-network-text">Social media</p>
           <ul class="social-network-list list">
             <li class="social-network-list-item">
-              <a href="" class="social-network-list-link"
-                ><svg class="social-network-list-icon" width="24" height="24">
+              <a href="" class="social-network-list-link"><svg class="social-network-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
 
             <li class="social-network-list-item">
-              <a href="" class="social-network-list-link"
-                ><svg class="social-network-list-icon" width="24" height="24">
+              <a href="" class="social-network-list-link"><svg class="social-network-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
 
             <li class="social-network-list-item">
-              <a href="" class="social-network-list-link"
-                ><svg class="social-network-list-icon" width="24" height="24">
+              <a href="" class="social-network-list-link"><svg class="social-network-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
 
             <li class="social-network-list-item">
-              <a href="" class="social-network-list-link"
-                ><svg class="social-network-list-icon" width="24" height="24">
+              <a href="" class="social-network-list-link"><svg class="social-network-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
@@ -362,19 +356,19 @@
           </ul>
         </div>
 
-        <div class="footer-mailto">
-          <p class="footer-mailto-text">Subscribe</p>
-          <form class="footer-mailto-form">
-            <label for="" class="footer-mailto-label">
+        <div class="footer-email">
+          <p class="footer-email-text">Subscribe</p>
+          <form class="footer-email-form">
+            <label class="footer-email-label">
               <input
-                class="footer-mailto-input"
-                type="mailto"
-                name="mailto"
-                required pattern="^(?=.*[a-z])(?=.*[A-Z])"
+                class="footer-email-input"
+                type="email"
+                name="email"
+                required 
                 placeholder="E-mail"/>
             </label>
-            <button class="footer-mailto-btn" type="Subscribe">Subscribe
-              <svg class="footer-mailto-svg" width="24" height="20">
+            <button class="footer-email-btn" type="submit">Subscribe
+              <svg class="footer-email-svg" width="24" height="20">
                 <use href="./images/icons.svg#icon-telegram"></use>
               </svg>
             </button>
@@ -382,5 +376,6 @@
         </div>
       </div>
     </footer>
+
   </body>
 </html>
